# actguard-docs

./: .gitignore  AGENTS.md  CLAUDE.md  docs.json  index.mdx
budgets/: index.mdx
docs/: concepts.md  index.md  tool-guards.md
docs/python-sdk/: README.md  api-reference.md  concepts.md  getting-started.md  index.md  tool-guards.md
docs/python-sdk/.github/workflows/: publish-sdk-py.yml
docs/python-sdk/examples/00_shared/: modes.py
docs/python-sdk/examples/10_langchain/: main.py
docs/python-sdk/examples/20_langgraph/: README.md  main.py
docs/python-sdk/examples/40_prove_enforce/: airline_ticket_refund.py  prompt_injection_hallucinations.py  pyproject.toml
docs/python-sdk/integrations/: anthropic.md  google.md  openai.md
docs/python-sdk/libs/: AGENTS.md
examples/00_shared/: README.md  tools.py
examples/10_langchain/: README.md  requirements.txt
examples/20_langgraph/: requirements.txt
examples/30_google_adk/: README.md  requirements.txt
examples/40_prove_enforce/: README.md
gateway/: events.mdx  http-api.mdx  index.mdx  runtime-configuration.mdx
libs/sdk-py/: README.md  pyproject.toml
libs/sdk-py/actguard/: _gateway.py  budget.py  exceptions.py  run_context.py
libs/sdk-py/actguard/core/: state.py
libs/sdk-py/actguard/data/: pricing.json
libs/sdk-py/actguard/integrations/: __init__.py  google.py  manager.py  openai.py
libs/sdk-py/actguard/tools/: enforce.py  idempotent.py  timeout.py
libs/sdk-py/tests/: test_budget_guard.py
libs/sdk-py/tests/tools/: test_enforce.py  test_idempotent.py  test_prove.py  test_timeout.py
python-sdk/: api-reference.mdx  concepts.mdx  getting-started.mdx  index.mdx  tool-guards.mdx
python-sdk/integrations/: anthropic.mdx  google.mdx  openai.mdx
skills/push-main-branch/: SKILL.md
skills/push-main-branch/agents/: openai.yaml
(+20 files in other folders)
