[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actguard"
version = "0.1.2"
description = "actguard Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff",
    "openai>=1.76.0",
    "anthropic>=0.83.0",
]

[project.urls]
Homepage = "https://github.com/actguard/actguard"
Repository = "https://github.com/actguard/actguard"

[tool.hatch.build.targets.wheel]
packages = ["actguard"]

[tool.hatch.build.targets.sdist]
exclude = [
    "AGENTS.md",
    ".vscode/",
    ".pytest_cache/",
    ".ruff_cache/",
    ".venv/",
    "uv.lock",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "google-genai>=1.47.0",
]
