[project]
name = "40-prove-enforce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "actguard",
    "dotenv>=0.9.9",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "python-dotenv>=1.0.1",
]

[tool.uv.sources]
actguard = { path = "../../libs/sdk-py", editable = true }
